<resources>
    <string name="app_name">MOA_WAKKEN_EN_IJSBEREN</string>
    <string name="AantalWakken">Wakken</string>
    <string name="AantalIjsberen">Ijsberen</string>
    <string name="AantalPinguins">Pinguins</string>
    <string name="Start">Start</string>
    <string name="Controleren">Controleren</string>
    <string name="Tijd">Begin tijd</string>
    <string name="Pinguins">Pinguins</string>
    <string name="Ja">Ja</string>
    <string name="Nee">Nee</string>
    <string name="Instellingen">Instellingen</string>
    <string name="spelUitlegTitel">Spel uitleg</string>
    <string name="Opslaan">Opslaan</string>
    <string name="Seconden">sec.</string>
    <string name="Dobbelstenen">Dobbelstenen</string>
    <string name="Accept">Accepteren</string>
    <string name="Annuleren">Annuleren</string>
    <string name="Naam">Voer uw naam in</string>
    <string name= "nameList">Naam: </string>
    <string name= "goodList">Goed: </string>
    <string name= "wrongList">Fout: </string>
    <string name= "timeList">Tijd: </string>
    <string name= "diceList">Dobbelstenen: </string>
    <string name="Welkom">Welkom</string>
    <string name="naamError">Er is geen naam ingevuld</string>
    <string name="invoerError">Vul eerst gegevens in!</string>
    <string name="tijdError">Uw tijd is om!</string>
    <string name="spelUitleg">- Een wak is het middelste oog van een dobbelsteen.\n \n

- De ijsberen zijn de ogen om een wak heen. Alleen om een wak zitten ijsberen!
Zit er GEEN wak op de dobbelsteen, dan is er ook geen ijsbeer. \n\n

- De pinguins zijn de ogen aan de achterkant van de dobbelsteen. De voorkant en de achterkant van de dobbelsteen zijn altijd samen 7 ogen.</string>
</resources>
